cluster/manifests/realtime-search-exporter/overlays/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: realtime-search-exporter
  labels:
    name: realtime-search-exporter
    pod-security.kubernetes.io/enforce: restricted
