cluster/manifests/realtime-search-exporter/overlays/dev/peer_authentication.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: realtime-search-exporter
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: realtime-search-exporter
      app.kubernetes.io/component: ""
  mtls:
    mode: STRICT
