cluster/manifests/realtime-search-exporter/overlays/dev/service_entry.yaml
apiVersion: networking.istio.io/v1
kind: ServiceEntry
metadata:
  name: search.yahoo.co.jp
spec:
  exportTo:
    - .
  hosts:
    - search.yahoo.co.jp
  location: MESH_EXTERNAL
  ports:
    - name: https
      number: 443
      protocol: HTTPS
  resolution: DNS
