cluster/manifests/realtime-search-exporter/overlays/dev/sidecar.yaml
apiVersion: networking.istio.io/v1
kind: Sidecar
metadata:
  name: realtime-search-exporter
spec:
  workloadSelector:
    labels:
      app.kubernetes.io/name: realtime-search-exporter
      app.kubernetes.io/component: ""
  outboundTrafficPolicy:
    mode: REGISTRY_ONLY
  egress:
    - captureMode: DEFAULT
      hosts:
        - ./search.yahoo.co.jp
        - istio-system/istiod.istio-system.svc.cluster.local
        - otel/otel-agent.otel.svc.cluster.local
